# opencode_orchestrator

./: .gitignore  ARCHITECTURE-V2.md  PUSH_TO_GITHUB.md  README.md  SKILL.md  pyproject.toml  test_mcp.sh  test_mcp_quick.sh
profiles/: be-dev.md  devops.md  fe-dev.md  qa.md  security.md  ui-review.md
src/opencode_orchestrator/: __init__.py  models.py  profiles.py  server.py  task_manager.py  tmux.py  worker_manager.py
src/opencode_orchestrator/agents/: __init__.py  base.py  opencode.py
